Criando exceptions basicas de validadcao para todas as classes, tudo ok.